...
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tradeReviewDeclineAndCounterOffer"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Accept"
            android:id="@+id/tradeReviewAccept"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Decline"
            android:id="@+id/tradeReviewDecline"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
